compiler/testData/diagnostics/testsWithJsStdLib/native/anonymousInitializer.kt
// RUN_PIPELINE_TILL: FRONTEND
external class A {
    <!EXTERNAL_ANONYMOUS_INITIALIZER!>init {
        definedExternally
    }<!>
}